# shad-rust-2024

./: .deadlines.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  SETUP.md
.cargo/: config.toml
add/: .check.yml
task/add/: .check.toml  .grade.yml  README.md
task/add/src/: lib.rs
task/chip8/: .check.toml  Cargo.toml  README.md
task/chip8/.cargo/: config.toml
task/chip8/src/: data.rs  error.rs  image.rs  interpreter.rs  lib.rs  managed_interpreter.rs  platform.rs
task/chip8/tests/: tests.rs
task/chip8/tools/console-runner/: Cargo.toml
task/chip8/xtask/: Cargo.toml
task/chip8/xtask/src/: main.rs
task/comm/: .check.toml  .grade.toml  Cargo.toml  README.md
task/comm/.cargo/: config.toml
task/comm/src/: main.rs
task/comm/tests/: tests.rs
task/comm/xtask/: Cargo.toml
task/comm/xtask/src/: main.rs
task/flatmap/: Cargo.toml  README.md
task/flatmap/src/: lib.rs
task/fswalk/: Cargo.toml
task/fswalk/src/: lib.rs
task/gc/: .check.toml  Cargo.toml
task/gc/gc-derive/: Cargo.toml
task/gc/gc-derive/src/: lib.rs
task/gc/src/: lib.rs
task/ini/: Cargo.toml
task/ini/src/: lib.rs
task/mpsc/: Cargo.toml
task/mpsc/src/: lib.rs
task/orm/: .check.toml  README.md
task/orm/orm-derive/: Cargo.toml
task/orm/orm-derive/src/: lib.rs
task/orm/src/: data.rs  error.rs  storage.rs  transaction.rs
task/paperio/: .check.toml  README.md  launch.json
task/paperio/.cargo/: config.toml
task/paperio/bots/: aggressive.wasm  coward.wasm  fool.wasm
task/paperio/gui/: Cargo.toml
task/paperio/gui/src/: app.rs  colors.rs  lib.rs  main.rs  state.rs
task/paperio/proto/: Cargo.toml
task/paperio/proto/src/: lib.rs  traits.rs
task/paperio/server/: Cargo.toml
task/paperio/server/src/: endpoint.rs  game.rs  game_field.rs  lib.rs  main.rs  player_endpoint.rs  player_vec.rs  server.rs
task/paperio/strategy/: Cargo.toml
task/paperio/strategy/src/: lib.rs  main.rs  strategy.rs
task/paperio/wasm-launcher/: Cargo.toml
task/paperio/wasm-launcher/src/: lib.rs  main.rs
task/paperio/xtask/: Cargo.toml
task/paperio/xtask/src/: main.rs
task/pargrep/: Cargo.toml
task/pargrep/src/: lib.rs
task/perc/: .check.toml  .grade.toml  README.md
task/perc/src/: lib.rs  main.rs
task/polka/: Cargo.toml
task/polka/src/: lib.rs
task/pstack/: README.md
task/pstack/src/: lib.rs
task/pstack/tests/: tests.rs
task/rio/: .check.toml  README.md  README.net.md
task/rio/.cargo/: config.toml
task/rio/src/: runtime.rs
task/rio/src/scheduler/: current_thread.rs
task/rio/xtask/: Cargo.toml
task/rio/xtask/src/: main.rs
task/stdmacro/src/: lib.rs
task/tcp_proxy/src/: lib.rs
task/tcp_proxy/tests/: test.rs
task/trust/src/: lib.rs
xtask/: Cargo.toml
xtask/base/: Cargo.toml
xtask/base/src/: check.rs  checker_config.rs  lib.rs  main.rs  submit.rs  util.rs
xtask/src/: check.rs  lib.rs  main.rs  submit.rs  util.rs
xtask/util/: Cargo.toml
xtask/util/src/: lib.rs
