[workspace]
members = [
    "task/add",
    "task/chip8",
    "task/chip8/tools/console-runner",
    "task/chip8/xtask",
    "task/comm",
    "task/comm/xtask",
    "task/flatmap",
    "task/fswalk",
    "task/ini",
    "task/mpsc",
    "task/paperio/gui",
    "task/paperio/proto",
    "task/paperio/server",
    "task/paperio/strategy",
    "task/paperio/wasm-launcher",
    "task/paperio/xtask",
    "task/perc",
    "task/polka",
    "task/pstack",
    "task/trust",
    "xtask/base",
    "xtask/util",
]
resolver = "2"
