[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
git2 = "0.19.0"
reqwest = { version = "0.12.7", features = ["blocking", "multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
xshell = "0.2.6"
