[package]
name = "xtask-base"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.87" }
clap = { version = "4.5.17", features = ["derive"] }
gix = { version = "0.66.0" }
proc-macro2 = { version = "1.0.86" }
serde = { version = "1.0.210", features = ["derive"] }
xshell = { version = "0.2.6" }
xtask-util = { path = "../util" }
