[package]
name = "paperio-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
paperio-proto = { version = "0.1.0", path = "../proto" }
num-traits = "0.2.19"
anyhow = "1.0.89"
log = "0.4.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.31"
stderrlog = { git = "https://github.com/CramBL/stderrlog-rs", version = "0.6.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
