[package]
name = "paperio-wasm-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
cap-std = "2.0.0"
clap = { version = "4.5.18", features = ["derive"] }
wasi-common = "12.0.2"
wasmtime = { version = "12.0.2", default-features = false, features = [
  "cranelift",
] }
wasmtime-wasi = { version = "12.0.2", default-features = false, features = [
  "sync",
] }
